Fix CSS layout issue. Simplify component

--- a/packages/experiments/src/css/noncritical.css
+++ b/packages/experiments/src/css/noncritical.css
@@ -7,10 +7,8 @@ body {
   margin: 0;
 }
 
-#editor {
+#preact-root {
   height: 100%;
-  width: 100%;
-  overflow: auto;
 }
 
 .CodeMirror-content {
